some un-replaced placeholer is updated

--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
     "license": "MIT",
     "authors": [
         {
-            "name": ":author_name",
-            "email": ":author_email",
-            "homepage": "atiq.movtorrents.com",
+            "name": "Md. Atiqur Rahman",
+            "email": "atiq.cse.cu0506.su@gmail.com",
+            "homepage": "http://atiq.movtorrents.com",
             "role": "Developer"
         }
     ],
